--- a/index.html
+++ b/index.html
@@ -83,22 +83,25 @@
       <div class="box-container">
         <div class="box">
           <h3>about us</h3>
-          <p>--</p>
+          <p>Layanan Permintaan data</p>
+          <a href="">> Umum</a>
+          <a href="">> Instansi</a>
+          <a href="">> Mahasiswa</a>
         </div>
 
         <div class="box">
           <h3>quick links</h3>
-          <a href="index.html">home</a>
-          <a href="tentang.html">tentang</a>
-          <a href="layanan.html">layanan</a>
-          <a href="contact.html">contact</a>
+          <a href="index.html">> home</a>
+          <a href="tentang.html">> tentang</a>
+          <a href="layanan.html">> layanan</a>
+          <a href="contact.html">> contact</a>
         </div>
 
         <div class="box">
           <h3>follow us</h3>
-          <a href="https://www.facebook.com/infobmkgtegal">facebook</a>
-          <a href="https://twitter.com/info_bmkgtegal">twitter</a>
-          <a href="https://www.instagram.com/infobmkgtegal/?hl=id">instagram</a>
+          <a href="https://www.facebook.com/infobmkgtegal">> facebook</a>
+          <a href="https://twitter.com/info_bmkgtegal">> twitter</a>
+          <a href="https://www.instagram.com/infobmkgtegal/?hl=id">> instagram</a>
         </div>
 
         <div class="box">
