--- a/contact.html
+++ b/contact.html
@@ -95,6 +95,7 @@
             <div class="col-md-6">
               <div class="wow fadeInUp" data-wow-delay="0.5s">
                 <form>
+                  <p style="text-align: center">Silahkan hubungi kami jika ada kendala</p>
                   <div class="row g-3">
                     <div class="col-md-6">
                       <div class="form-floating">
