--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
         <a href="contact.html">contact</a>
       </nav>
     </header>
-
+    <marquee> Selamat Datang di Layanan BMKG Kota Tegal &nbsp;&nbsp;&nbsp; </marquee>
     <!-- header section ends -->
 
     <!-- home section starts  -->
-
     <section class="home" id="home">
       <div class="content">
         <h3>PTSP <span>Online BMKG Maritim Tegal</span></h3>
@@ -48,7 +47,6 @@
       <div class="image">
         <img src="images/home-page.png" alt="" />
       </div>
-      https://layanan-bmkg.netlify.app/
     </section>
     <!-- home section ends -->
 
