--- a/layanan.html
+++ b/layanan.html
@@ -38,7 +38,15 @@
 
     <!-- features section starts  -->
     <section class="layanan" id="layanan">
-      <h1 class="heading">Layanan</h1>
+      <h1 class="heading" style="text-align: left">Layanan</h1>
+      <div class="card">
+        <h3>Pemberitahuan Penting!</h3>
+        <p>
+          Ini adalah pemberitahuan penting yang harus Anda perhatikan. Bapak ibu yang terhormat silahkan konfirmasi ulang anda untuk Permohonan Permintaan Data. Jangan lupa lengkapi data anda agar kami dapat merespon dengan baik. Silakan
+          <a href="aksi.html">Klik Disini</a>.
+        </p>
+      </div>
+      <div style="border: 0.5px solid #bfbfbf"></div>
       <div class="box-container">
         <div class="box">
           <img src="images/f-icon1.png" alt="" />
@@ -59,6 +67,31 @@
           <h3>Mahasiswa</h3>
           <p>Mengisi Formulir permohonan data/informasi meteorologi/klimatologi Stamet Maritim Tegal dengan tarif 0 (nol) rupiah untuk Mahasiswa / Pelajar</p>
           <a href="https://bit.ly/permohonan-data-0-rupiah-mahasiswa" class="btn">Lanjut</a>
+        </div>
+      </div>
+
+      <h1 class="heading" style="text-align: left">Pengaduan</h1>
+      <div style="border: 0.5px solid #bfbfbf"></div>
+      <div class="box-container">
+        <div class="box">
+          <img src="images/pengaduan.jpg" alt="" />
+          <h3>Layanan Pengaduan</h3>
+          <p>Layanan ini merupakan salah satu penerapan bentuk pengawasan terhadap kinerja Stasiun Metorologi Maritim Tegal</p>
+          <a href="https://bit.ly/form-layanan-pengaduan" class="btn">Lanjut</a>
+        </div>
+
+        <div class="box">
+          <img src="images/korupsi.jpg" alt="" />
+          <h3>Link Persepsi Korupsi</h3>
+          <p>Survey ini merupakan salah satu bentuk dukungan dan peran aktif dalam hal pencegahan dan pemberantasan korupsi</p>
+          <a href="https://bit.ly/survey-persepsi-anti-korupsi" class="btn">Lanjut</a>
+        </div>
+
+        <div class="box">
+          <img src="images/survey.jpg" alt="" />
+          <h3>Indeks Kepuasan Masyarakat</h3>
+          <p>Survey ini merupakan salah satu bentuk dukungan dan peran aktif dalam hal pelayanan kepada Masyarakat</p>
+          <a href="https://eskm.bmkg.go.id/survey/436860/0/2/2022-07/2022/0" class="btn">Lanjut</a>
         </div>
       </div>
     </section>
