--- a/tentang.html
+++ b/tentang.html
@@ -43,7 +43,7 @@
 
       <div class="column">
         <div class="image">
-          <img src="images/about-img.png" alt="" />
+          <img src="images/tentang.png" alt="" />
         </div>
 
         <div class="content">
@@ -59,8 +59,32 @@
         </div>
       </div>
     </section>
-
     <!-- about section ends -->
+
+    <!-- Section 4 -->
+    <section class="section-4">
+      <h1 class="section-4-heading">Langkah-langkah pengisian</h1>
+      <div class="section-4-content">
+        <div class="section-4-img-wrapper">
+          <img src="images/macbook.png" />
+        </div>
+        <ul class="section-4-list">
+          <li class="section-4-list-item">
+            <span class="number">1</span>
+            <span>Set up <a href="https://freewebsitecode.com">a business account</a></span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">2</span>
+            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, esse?</span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">3</span>
+            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- End of Section 4 -->
 
     <!-- footer section starts  -->
     <div class="footer">
