--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- home section ends -->
 
     <!-- Section 2 -->
-    <section class="section-2" id="layanan">
+    <!-- <section class="section-2" id="layanan">
       <h1 class="section-2-heading">Layanan yang disediakan</h1>
       <div class="services">
         <div class="service">
@@ -74,7 +74,7 @@
           <a href="layanan.html" class="btn">Learn More</a>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End of Section 2 -->
 
     <!-- footer section starts  -->
