--- a/layanan.html
+++ b/layanan.html
@@ -216,35 +216,6 @@
     </div>
     <!-- footer section ends -->
 
-    <script>
-      function openModal() {
-        var modal = document.getElementById("myModal");
-        modal.style.display = "block";
-      }
-
-      function closeModal() {
-        var modal = document.getElementById("myModal");
-        modal.style.display = "none";
-      }
-
-      function whatsapp() {
-        var name = document.getElementById("name").value;
-        var mobile = document.getElementById("mobile").value.replace(/\s+/g, ""); // Remove spaces from mobile number
-        var email = document.getElementById("email").value;
-        var message = document.getElementById("message").value;
-
-        var whatsappurl = "https://wa.me/+6287717608230?text=" + "Nama: " + name + "%0a" + "Nomor Telp: " + mobile + "%0a" + "Email: " + email + "%0a" + "Pesan: " + message;
-
-        window.open(whatsappurl, "_blank").focus();
-      }
-
-      // Close the modal if the user clicks anywhere outside of it
-      window.onclick = function (event) {
-        var modal = document.getElementById("myModal");
-        if (event.target == modal) {
-          modal.style.display = "none";
-        }
-      };
-    </script>
+    <script src="js/main.js"></script>
   </body>
 </html>
