--- a/layanan.html
+++ b/layanan.html
@@ -66,9 +66,8 @@
       <h1 class="heading" style="text-align: left">Layanan</h1>
       <div class="card">
         <h3>Pemberitahuan Penting!</h3>
-        <p>
-          Ini adalah pemberitahuan penting yang harus Anda perhatikan. Bapak ibu yang terhormat silahkan konfirmasi ulang anda untuk Permohonan Permintaan Data. Jangan lupa lengkapi data anda agar kami dapat merespon dengan baik. Silakan
-          <a href="#" onclick="openModal()">Klik Disini</a>.
+        <p>Ini adalah pemberitahuan penting yang harus Anda perhatikan. Bapak ibu yang terhormat silahkan konfirmasi ulang anda untuk Permohonan Permintaan Data. Jangan lupa lengkapi data anda agar kami dapat merespon dengan baik.</p>
+          <a href="#" class="btn" style="align-items: center;" onclick="openModal()">Klik Disini</a>.
         <!-- The Modal -->
         <div id="myModal" class="modal">
           <section class="aksi" id="aksi">
