--- a/tentang.html
+++ b/tentang.html
@@ -39,7 +39,7 @@
     <!-- about section starts  -->
 
     <section class="about" id="about">
-      <h1 class="heading">Tentang Layanan</h1>
+      <h1 class="heading">Tentang Layanan dan Pengaduan</h1>
 
       <div class="column">
         <div class="image">
@@ -47,10 +47,12 @@
         </div>
 
         <div class="content">
-          <h3>halo</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <h3>Alur permintaan data</h3>
+          <p>Tersedia 3 layanan untuk permintaan data yaitu terdiri dari layanan umum, layanan instansi dan layanan mahasiswa. Dan tersedia layanan untuk pengaduan, survey layanan presepsi korupsi dan indeks kepuasan masyarakat.</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum pariatur incidunt omnis numquam aspernatur illo provident voluptatibus voluptatem. Excepturi qui expedita minima est illo iure impedit eaque minus assumenda official
+            Layanan permintaan data umum Untuk Instansi Maupun Perorangan,Layanan Instansi dan Mahsiswa Dengan Tarif 0 (Nol) Rupiah Untuk Kebutuhan Instansi. Sedangkan untuk layanan pengaduan berisi layanan pengaduan satu penerapan bentuk
+            pengawasan terhadap kinerja Stasiun Metorologi Tegal, Layanan Survey Persepsi Anti Korupsi bertujuan untuk mendapatkan informasi tentang persepsi korupsi dari pengguna layanan dan Indeks Kepuasan Masyarakat Survey Ini Merupakan
+            Salah Satu Bentuk Dukungan Dan Peran Aktif Dalam Hal Pelayanan Kepada Masyarakat.
           </p>
           <div class="buttons">
             <a href="#" class="btn"> <i class="fab fa-"></i> Klik Disini </a>
@@ -63,7 +65,40 @@
 
     <!-- Section 4 -->
     <section class="section-4">
-      <h1 class="section-4-heading">Langkah-langkah pengisian</h1>
+      <h1 class="section-4-heading">Alur permintaan data cuaca 0 rupiah</h3>
+      <div class="section-4-content">
+        <div class="section-4-img-wrapper">
+          <img src="images/tentang.png" />
+        </div>
+        <ul class="section-4-list">
+          <li class="section-4-list-item">
+            <span class="number">1</span>
+            <span>Kunjungi link <a href="https://bmkgtegal.info/">layanan</a></span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">2</span>
+            <span>Masuk pada halaman layanan dan memilih pada layanan instansi/mahasiswa</span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">3</span>
+            <span>Maka diarahkan pada halaman google form dan isi sesuai syarat</span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">4</span>
+            <span>Untuk mahasiswa dapat menambahkan scan proposal skripsi pada ponit 3 sebagai syarat</span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">5</span>
+            <span>Jika sudah melengkapi semua syarat, masuk ke halaman layanan kembali untuk konfirmasi ulang melalui whatsaap</span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">6</span>
+            <span>Data akan dikirimkan melalui whatsaap setelah melalui konfirmasi ulang dan maksimal terima 14 hari setelah persyaratan diterima.</span>
+          </li>
+        </ul>
+      </div>
+
+      <h1 class="section-4-heading" style="padding-top: 50px;">Alur permintaan data cuaca rupiah</h1>
       <div class="section-4-content">
         <div class="section-4-img-wrapper">
           <img src="images/macbook.png" />
@@ -71,15 +106,47 @@
         <ul class="section-4-list">
           <li class="section-4-list-item">
             <span class="number">1</span>
-            <span>Set up <a href="https://freewebsitecode.com">a business account</a></span>
+            <span>Kunjungi link <a href="https://bmkgtegal.info/">layanan</a></span>
           </li>
           <li class="section-4-list-item">
             <span class="number">2</span>
-            <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, esse?</span>
+            <span>Masuk pada halaman layanan dan memilih pada layanan umum</span>
           </li>
           <li class="section-4-list-item">
             <span class="number">3</span>
-            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+            <span>Maka diarahkan pada halaman google form dan isi sesuai syarat</span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">4</span>
+            <span>Isi formulir surat permohonan sesuai dengan form yang telah disediakan, kemudian kirimkan. </span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">5</span>
+            <span>Kembali ke halaman website melalui tautan ... untuk mengisi konfirmasi data. </span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">6</span>
+            <span>Isi form konfirmasi data, lalu kirimkan data melalui aplikasi WhatsApp. </span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">7</span>
+            <span>Tunggu menerima kode e-billing dari Badan Meteorologi, Klimatologi, dan Geofisika (BMKG) melalui WhatsApp atau email. </span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">8</span>
+            <span>Bayar kode e-billing di kantor pos atau bank terdekat sesuai dengan petunjuk pembayaran yang diberikan. </span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">9</span>
+            <span>Scan atau fotokopi bukti pembayaran, lalu kirimkan melalui email atau WhatsApp ke BMKG Tegal. </span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">10</span>
+            <span>Tunggu surat keterangan cuaca selama maksimal 14 hari setelah tanggal penerimaan bukti pembayaran. </span>
+          </li>
+          <li class="section-4-list-item">
+            <span class="number">11</span>
+            <span>Surat keterangan cuaca akan dikirimkan melalui WhatsApp atau email kepada pemohon. </span>
           </li>
         </ul>
       </div>
