--- a/contact.html
+++ b/contact.html
@@ -153,9 +153,13 @@
         <div class="box">
           <h3>about us</h3>
           <p>Layanan Permintaan data</p>
-          <a href="">> Umum</a>
-          <a href="">> Instansi</a>
-          <a href="">> Mahasiswa</a>
+          <a href="layanan.html">> Umum</a>
+          <a href="layanan.html">> Instansi</a>
+          <a href="layanan.html">> Mahasiswa</a>
+          <p>Layanan Pengaduan</p>
+          <a href="layanan.html">> Pengaduan</a>
+          <a href="layanan.html">> Persepsi Korupsi</a>
+          <a href="layanan.html">> Survey Kepuasan</a>
         </div>
 
         <div class="box">
@@ -203,11 +207,9 @@
           </div>
         </div>
       </div>
-
       <h1 class="credit">&copy; copyright 2023 by <a href="https://bmkgtegal.info/index.html">BMKG Kota Tegal</a></h1>
       <br /><br />
     </div>
-
     <!-- footer section ends -->
 
     <!-- JavaScript Libraries -->
