--- a/index.html
+++ b/index.html
@@ -50,42 +50,19 @@
     </section>
     <!-- home section ends -->
 
-    <!-- Section 2 -->
-    <!-- <section class="section-2" id="layanan">
-      <h1 class="section-2-heading">Layanan yang disediakan</h1>
-      <div class="services">
-        <div class="service">
-          <i class="far fa-handshake"></i>
-
-          <h3 class="service-heading">Umum</h3>
-          <p class="service-paragraph">Layanan Permintaan Data Untuk Umum Berbayar.</p>
-          <a href="layanan.html" class="btn">Learn More</a>
-        </div>
-        <div class="service">
-          <i class="fas fa-building-columns"></i>
-          <h3 class="service-heading">Instansi</h3>
-          <p class="service-paragraph">Layanan Permintaan Data Tarif Nol Rupiah Untuk Instansi.</p>
-          <a href="layanan.html" class="btn">Learn More</a>
-        </div>
-        <div class="service">
-          <i class="fas fa-user-tie"></i>
-          <h3 class="service-heading">Mahasiswa</h3>
-          <p class="service-paragraph">Layanan Permintaan Data Tarif Nol Rupiah Untuk Mahasiswa.</p>
-          <a href="layanan.html" class="btn">Learn More</a>
-        </div>
-      </div>
-    </section> -->
-    <!-- End of Section 2 -->
-
     <!-- footer section starts  -->
     <div class="footer">
       <div class="box-container">
         <div class="box">
           <h3>about us</h3>
           <p>Layanan Permintaan data</p>
-          <a href="">> Umum</a>
-          <a href="">> Instansi</a>
-          <a href="">> Mahasiswa</a>
+          <a href="layanan.html">> Umum</a>
+          <a href="layanan.html">> Instansi</a>
+          <a href="layanan.html">> Mahasiswa</a>
+          <p>Layanan Pengaduan</p>
+          <a href="layanan.html">> Pengaduan</a>
+          <a href="layanan.html">> Persepsi Korupsi</a>
+          <a href="layanan.html">> Survey Kepuasan</a>
         </div>
 
         <div class="box">
