--- a/tentang.html
+++ b/tentang.html
@@ -54,10 +54,6 @@
             pengawasan terhadap kinerja Stasiun Metorologi Tegal, Layanan Survey Persepsi Anti Korupsi bertujuan untuk mendapatkan informasi tentang persepsi korupsi dari pengguna layanan dan Indeks Kepuasan Masyarakat Survey Ini Merupakan
             Salah Satu Bentuk Dukungan Dan Peran Aktif Dalam Hal Pelayanan Kepada Masyarakat.
           </p>
-          <div class="buttons">
-            <a href="#" class="btn"> <i class="fab fa-"></i> Klik Disini </a>
-            <a href="#" class="btn"> <i class="fab fa-"></i> Klik Disini </a>
-          </div>
         </div>
       </div>
     </section>
@@ -65,7 +61,7 @@
 
     <!-- Section 4 -->
     <section class="section-4">
-      <h1 class="section-4-heading">Alur permintaan data cuaca 0 rupiah</h3>
+      <h1 class="section-4-heading">Alur permintaan data cuaca tarif 0 rupiah</h3>
       <div class="section-4-content">
         <div class="section-4-img-wrapper">
           <img src="images/tentang.png" />
@@ -98,7 +94,7 @@
         </ul>
       </div>
 
-      <h1 class="section-4-heading" style="padding-top: 50px;">Alur permintaan data cuaca rupiah</h1>
+      <h1 class="section-4-heading" style="padding-top: 50px;">Alur permintaan data cuaca Berbayar</h1>
       <div class="section-4-content">
         <div class="section-4-img-wrapper">
           <img src="images/macbook.png" />
@@ -159,9 +155,13 @@
         <div class="box">
           <h3>about us</h3>
           <p>Layanan Permintaan data</p>
-          <a href="">> Umum</a>
-          <a href="">> Instansi</a>
-          <a href="">> Mahasiswa</a>
+          <a href="layanan.html">> Umum</a>
+          <a href="layanan.html">> Instansi</a>
+          <a href="layanan.html">> Mahasiswa</a>
+          <p>Layanan Pengaduan</p>
+          <a href="layanan.html">> Pengaduan</a>
+          <a href="layanan.html">> Persepsi Korupsi</a>
+          <a href="layanan.html">> Survey Kepuasan</a>
         </div>
 
         <div class="box">
@@ -209,7 +209,6 @@
           </div>
         </div>
       </div>
-
       <h1 class="credit">&copy; copyright 2023 by <a href="https://bmkgtegal.info/index.html">BMKG Kota Tegal</a></h1>
       <br /><br />
     </div>
