--- a/tentang.html
+++ b/tentang.html
@@ -63,9 +63,9 @@
     <section class="section-4">
       <h1 class="section-4-heading">Alur permintaan data cuaca tarif 0 rupiah</h3>
       <div class="section-4-content">
-        <div class="section-4-img-wrapper">
+        <!-- <div class="section-4-img-wrapper">
           <img src="images/tentang.png" />
-        </div>
+        </div> -->
         <ul class="section-4-list">
           <li class="section-4-list-item">
             <span class="number">1</span>
@@ -92,13 +92,16 @@
             <span>Data akan dikirimkan melalui whatsaap setelah melalui konfirmasi ulang dan maksimal terima 14 hari setelah persyaratan diterima.</span>
           </li>
         </ul>
+        <div class="section-4-img-wrapper">
+          <img src="images/pel.png" />
+        </div>
       </div>
 
-      <h1 class="section-4-heading" style="padding-top: 50px;">Alur permintaan data cuaca Berbayar</h1>
+      <h1 class="section-4-heading" style="padding-top: 50px;">Alur permintaan data cuaca Tarif Berbayar</h1>
       <div class="section-4-content">
-        <div class="section-4-img-wrapper">
-          <img src="images/macbook.png" />
-        </div>
+        <!-- <div class="section-4-img-wrapper">
+          <img src="images/tentang.png" />
+        </div> -->
         <ul class="section-4-list">
           <li class="section-4-list-item">
             <span class="number">1</span>
@@ -145,6 +148,9 @@
             <span>Surat keterangan cuaca akan dikirimkan melalui WhatsApp atau email kepada pemohon. </span>
           </li>
         </ul>
+        <div class="section-4-img-wrapper">
+          <img src="images/pel2.png" />
+        </div>
       </div>
     </section>
     <!-- End of Section 4 -->
