--- a/layanan.html
+++ b/layanan.html
@@ -94,7 +94,10 @@
                   <label>Pesan</label>
                   <textarea name="pesan" id="message" cols="30" rows="10" placeholder="Masukkan Pesan Anda"></textarea>
                 </div>
-                <button type="button" onclick="whatsapp()" value="send enquiry">Submit</button>
+                <a href="https://eskm.bmkg.go.id/survey/436860/0/2/2023-07/2023/0°">
+                  <button type="button" onclick="whatsapp()" value="send enquiry">Submit</button>
+                </a>
+                
               </form>
             </div>
           </section>
